--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto mr-auto wow fadeIn">
             <li class="nav-item">
-              <a href="#reservas" class="nav-link"><b>Reservas</b></a>
+              <a href="#reserva" class="nav-link"><b>Reservas</b></a>
             </li>
             <li class="nav-item">
               <a href="#servicos" class="nav-link"><b>Serviços</b></a>
